# src.next

./: .gitignore  CHROMIUM_VERSION  KIWI_VERSION  LICENSE  README.md  cloudbuild.yaml  fetch_from_upstream.sh  generate_ccache_build.sh  iconUpdateScript.sh
.build/android_arm/: args.gn
.build/production_build_reference/: args.gn
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue.md
.github/workflows/: build_and_sign_apk.yml  build_and_sign_release_apk.yml  build_apk.yml  build_apk_and_sign.yml  codeql-analysis.yml  delete_committed_file.yml  download_icon_from_fontawesome.yml  download_new_version_of_chromium.yml  download_translations_from_crowdin.yml  force_rebase_kiwi_on_top_of_local_chromium.yml  import_file_from_chromium.yml  imtlazarus1.yml  linter.yml  rebase.yml  rebase_and_build_apk  rebase_and_build_apk.yml  rebase_kiwi_on_top_of_chromium.yml  rebase_kiwi_on_top_of_kiwi.yml  rename_directory  rename_directory.yml  update_chromium_files.yml
base/android/: sys_utils.cc  sys_utils.h
chrome/: chrome_paks.gni
chrome/android/: BUILD.gn  (+3 more)
components/: BUILD.gn  autofill_payments_strings.grdp  autofill_strings.grdp  commerce_strings.grdp  components_strings.grd  dialog_strings.grdp  find_in_page_strings.grdp  history_strings.grdp  new_or_sad_tab_strings.grdp  page_info_strings.grdp  payments_strings.grdp  permissions_strings.grdp  reset_password_strings.grdp  send_tab_to_self_strings.grdp  site_settings_strings.grdp  sync_ui_strings.grdp
extensions/: BUILD.gn
toolbox/: download_translations_from_crowdin.php  icon_update_script.sh
(+392 files in other folders)
